@@ -66,6 +66,7 @@
             var propwheel=!$.browser.opera;
             var propmousebutton=false;
             var propmouseprev=0;
+            var propsuspendchange=false;
             var propscrolling=false;
             
             var solvetimeout=false;
@@ -439,6 +440,7 @@
                             reff=proptoprow+r-1;
                             if(reff<=propcount){
                                 propmouseprev=reff;
+                                propsuspendchange=false;
                                 if(c!=0){
                                     if(reff!=propindex)
                                         propobj.index(reff);
@@ -518,12 +520,20 @@
                     function(evt){
                         propmousebutton=false;
                         propmouseprev=0;
+                        if(propsuspendchange){
+                            propsuspendchange=false;
+                            propobj.raisechangerow();
+                        }
                     }
                 );
                 $("#"+propname).hover(
                     function(evt){
                         propmousebutton=false;
                         propmouseprev=0;
+                        if(propsuspendchange){
+                            propsuspendchange=false;
+                            propobj.raisechangerow();
+                        }
                     }
                 );
                 $("#"+propname).mousemove(
@@ -542,20 +552,25 @@
                             else
                                 r=parseInt(tid.replace(/^.*_(\d+)_\d+$/,"$1"));
                             setfocusable(r);
-                            if(r>0){
+                            if(r>0 && propmouseprev>0){
                                 reff=proptoprow+r-1;
-                                if(reff<=propcount){
-                                    if(reff!=propmouseprev){
-                                        if(propmouseprev>0){
-                                            if(propobj.selected(propmouseprev)==evt.shiftKey)
-                                                selectrow(propmouseprev, true, !evt.shiftKey);
-                                            propmouseprev=0;
-                                        }
-                                        if(propobj.selected(reff)==evt.shiftKey)
-                                            selectrow(reff, true, !evt.shiftKey);
-                                        if(reff!=propindex)
-                                            propobj.index(reff);
+                                if(reff>propcount)
+                                    reff=propcount;
+                                if(reff>propmouseprev){
+                                    for(var m=propmouseprev; m<=reff; m++){
+                                        selectrow(m, true, !evt.shiftKey);
                                     }
+                                    propmouseprev=reff;
+                                }
+                                else if(reff<propmouseprev){
+                                    for(var m=propmouseprev; m>=reff; m--){
+                                        selectrow(m, true, !evt.shiftKey);
+                                    }
+                                    propmouseprev=reff;
+                                }
+                                if(reff!=propindex){
+                                    propsuspendchange=true;
+                                    propobj.index(reff);
                                 }
                             }
                         }
@@ -730,7 +745,7 @@
                                 try{
                                     switch(proptyps[c-1]){
                                     case "?":
-                                        if(parseInt(vl)!=0)
+                                        if(vl!=0)
                                             $(fd).html("&#x2714;");
                                         else
                                             $(fd).html("&#x0020;");
@@ -768,7 +783,6 @@
                                     default:
                                         if(nums[c]){
                                             vl=_nformat(vl, decs[c]);
-                                            if(vl==="NaN"){vl=""}
                                             $(fd).html(vl);
                                         }
                                         else{
@@ -1422,44 +1436,11 @@
                 setTimeout(autofit);
             }
             this.cells=function(r,n,v){
-                var c;
                 if($.isNumeric(n)){
-                    c=n-1;
-                    n=propcols[c];
-                }
-                else{
-                    for(var i=0;i<propcols.length; i++){
-                        if(propcols[i]==n){
-                            c=i;
-                            break;
-                        }
-                    }
+                    n=propcols[n-1];
                 }
                 if(v==missing){
                     v=this.matrix[r-1][n];
-                    if(typeof v=="string"){
-                        switch(proptyps[c]){
-                        case "?":
-                            v=_bool(v);
-                            break;
-                        case "/":
-                            v=v.replace(/[^\d]/gi, "").substr(0,8);
-                            break;
-                        case ":":
-                            v=(v+"000000").replace(/[^\d]/gi, "").substr(0,14);
-                            break;
-                        case "":
-                            v=v.replace(/ +$/, "");
-                            break;
-                        default:
-                            v=parseFloat(v);
-                            if(v==="NaN")
-                                v=0;
-                        }
-                    }
-                    else{
-                        v="";
-                    }
                 }
                 else{
                     if(v==null)
@@ -1485,6 +1466,19 @@
                     this.matrix[r-1][n]=v;
                 }
                 return v;
+            }
+            this.insert=function(d, r){
+                if(r==missing || r==0)
+                    propobj.matrix.push(d);
+                else
+                    propobj.matrix.splice(r-1, 0, d);
+                propobj.setmatrix(propobj.matrix);
+            }
+            this.remove=function(r){
+                if(r==missing || r==0)
+                    r=propindex;
+                propobj.matrix.splice(r-1, 1);
+                propobj.setmatrix(propobj.matrix);
             }
             // CHIAMATA ALLA GENERAZIONE EFFETTIVA
             try{this.create();}catch(e){}
@@ -1846,7 +1840,7 @@
                                 // NOME DI COLONNA: CERCO L'INDICE
                                 nams[i]=cols[i];
                                 cols[i]=0;
-                                for(var c in propcols){
+                                for(var c=0; c<propcols.length; c++){
                                     if(propcols[c]==nams[i]){
                                         cols[i]=c+1;
                                         break;
